<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.zaydbille.utilitywatch.HelpActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Utility Watch Help"
        android:id="@+id/titleView"
        android:background="@color/ColorPrimary"
        android:textColor="#ffffffff"
        android:backgroundTint="@color/ColorPrimaryDark"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentStart="false"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView3"
        android:layout_alignParentEnd="false"
        android:layout_below="@+id/titleView"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/paragraph_1"
                android:id="@+id/paragraph_1"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/paragraph_2"
                android:id="@+id/paragraph_2"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/paragraph_3"
                android:id="@+id/paragraph_3"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/paragraph_4"
                android:id="@+id/paragraph_4"
                android:paddingTop="20dp"
                android:paddingBottom="20dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
