<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimaryLight">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:textColor="#00695C"
                android:inputType="textMultiLine"
                android:maxLines="3" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/addChoiceButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/addChoiceButtonText"
                    android:layout_weight="1"
                    android:typeface="monospace"
                    android:textColor="@color/ColorPrimaryDark" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseButtonText"
                    android:id="@+id/chooseButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:typeface="monospace"
                    android:textColor="@color/ColorPrimaryDark" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clearChoicesButtonText"
                    android:id="@+id/clearButton"
                    android:layout_weight="1"
                    android:typeface="monospace"
                    android:textColor="@color/ColorPrimaryDark" />
            </LinearLayout>

            <ListView
                android:id="@+id/listView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>